materia: fix line-height for input sizes, remove x on ie, tweak radio and checkboxes, #657

--- a/materia/_bootswatch.scss
+++ b/materia/_bootswatch.scss
@@ -244,7 +244,6 @@ input[type=number],
   appearance: none;
   box-shadow: inset 0 -1px 0 #ddd;
   font-size: 16px;
-  line-height: 2.5;
   transition: all 0.2s;
 
   &:focus {
@@ -257,14 +256,25 @@ input[type=number],
     border-bottom: 1px dotted #ddd;
   }
 
-  &.input {
+  &:not(.form-control-sm, .form-control-lg) {
+  height: $input-height;
+
+  }
+
+  &.form-control {
     &-sm {
+      height: $input-height-sm;
       font-size: $font-size-sm;
     }
 
     &-lg {
+      height: $input-height-lg;
       font-size: $font-size-lg;
     }
+  }
+
+  &::-ms-clear {
+    display: none;
   }
 }
 
@@ -349,7 +359,7 @@ input[type="radio"],
   &:before {
     position: absolute;
     left: 0;
-    top: 1px;
+    top: 2px;
     background-color: $brand-primary;
     transform: scale(0);
   }
@@ -409,7 +419,7 @@ input[type="checkbox"],
   &:checked:before {
     content: "";
     position: absolute;
-    top: 4px;
+    top: 5px;
     left: 6px;
     display: table;
     width: 6px;
