--- a/materia/_variables.scss
+++ b/materia/_variables.scss
@@ -414,7 +414,7 @@ $btn-transition:                 all .2s ease-in-out !default;
 
 $input-padding-x:                .75rem !default;
 $input-padding-y:                .5rem !default;
-$input-line-height:              1.25 !default;
+$input-line-height:              2.5;
 
 $input-bg:                       transparent;
 $input-bg-disabled:              transparent;
